--- a/public/styles/portal/user-financeiro.css
+++ b/public/styles/portal/user-financeiro.css
@@ -4,7 +4,7 @@
 .finance-table .finance-head ul{
     display: grid;
 
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr  1fr 1fr 1fr 1fr 1fr 1fr;
 
     width: 100%;
     background-color: whitesmoke;
@@ -32,7 +32,7 @@
 .finance-rows .row ul{
     display: grid;
 
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     width: 100%;
     background-color: whitesmoke;
 
