--- a/views/admin/financeiro/financeiro.njk
+++ b/views/admin/financeiro/financeiro.njk
@@ -60,10 +60,21 @@
     {%endblock%}
 
     {%block content%}
-        <h1>Financeiro</h1>
 
 
         <div class="finance-wrapper">
+         <h1>Financeiro</h1>
+
+
+            <nav id="finance-menu">
+                <ul>
+                    <li><a href="/dashboard/financeiro/geral" class="ativo">Geral</a></li>
+                    <li><a href="/dashboard/financeiro/pagamentos">Pagamentos</a></li>
+                </ul>
+            </nav>
+
+
+
             <div class="card-wrapper">
                 <ul class="card">
                     <li class="label"><span>Entradas</span> <ion-icon class="icon  entrada" name="arrow-up-circle-outline"></ion-icon> </li>
@@ -80,20 +91,26 @@
             </div>
 
 
+            <form action="/financeiro/adicionar">
             <div class="finance-add">
                 <ul>
                     <li><span>Descrição</span> <input type="text" name="desc" id="desc"></li>
                     <li><span>Valor</span> <input type="number" name="valor" id="valor"></li>
+                     <li>
+                        <label for="data"><span>Data</span></label>
+                        <input type="date" name="data" id="data">
+                    </li>
                     <li><span>Tipo</span>
                         <select name="tipo" id="tipo">
                             <option value="Entrada">Entrada</option>
                             <option value="Saida">Saida</option>
                         </select>
                     </li>
+                   
                     <li><button>Adicionar</button></li>
                 </ul>
             </div>
-
+            </form>
 
             <div class="finance-table">
                 <div class="finance-head">
@@ -114,9 +131,11 @@
                             <li><span class="cifrao">R$</span> 1000</li>
                             <li>21/03/2022</li>
                             <li><ion-icon class="icon saida" name="arrow-down-circle-outline"></ion-icon></li>
+                            <form action="/fincanceiro/excluir/{{financeiro.id}}?_method=DELETE">
                             <li class="actions">
                                 <span class="deletar"><ion-icon class="icon" name="trash-outline"></ion-icon> </span>
                             </li>
+                            </form> 
                         </ul>
                     </div>
 
@@ -132,28 +151,8 @@
                                 </li>
                             </ul>
                     </div>
-                    <div class="row">
-                            <ul>
-                                <li>Mensalidade</li>
-                                <li><span class="cifrao">R$</span> 1000</li>
-                                <li>05/02/2022</li>
-                                <li><ion-icon class="icon entrada" name="arrow-up-circle-outline"></ion-icon></li>
-                                <li class="actions">
-                                    <span class="deletar" ><ion-icon class="icon" name="trash-outline"></ion-icon> </span >
-                                </li>
-                            </ul>
-                    </div>
-                    <div class="row">
-                            <ul>
-                                <li>Mensalidade</li>
-                                <li><span class="cifrao">R$</span> 1000</li>
-                                <li>05/01/2022</li>
-                                <li><ion-icon class="icon entrada" name="arrow-up-circle-outline"></ion-icon></li>
-                                <li class="actions">
-                                    <span class="deletar" ><ion-icon class="icon" name="trash-outline"></ion-icon> </span >
-                                </li>
-                            </ul>
-                    </div>
+
+                   
                 </div>
             </div>
 
