--- a/views/portal/user-financeiro.njk
+++ b/views/portal/user-financeiro.njk
@@ -54,8 +54,8 @@
                         <li>Data de vencimento </li>
                         <li>Data de pagamento </li>
                         <li>Valor</li>
-                        <li>Juros</li>
-                        <li>Valor pago</li>
+                        {# <li>Juros</li> #}
+                        {# <li>Valor pago</li> #}
                         <li>Situação</li>
                         <li>Detalhes</li>
                 </ul>
@@ -71,32 +71,21 @@
                                 <li>20/03/2022</li>
                                 <li></li>
                                 <li><span class="cifrao">R$</span>110,00</li>
-                                <li><span class="cifrao">R$</span>0,00</li>
-                                <li><span class="cifrao">R$</span>0,00</li>
-                                <li class="status">em aberto</li>
+                                {# <li><span class="cifrao">R$</span>0,00</li> #}
+                                {# <li><span class="cifrao">R$</span>0,00</li> #}
+                                <li class="status">Pendente</li>
                                 <li class="detalhes"><a href="#">Detalhes</a></li>
                             </ul>
                     </div>
+
                     <div class="row">
                             <ul>
                                 <li>Felipe</li>
                                 <li>20/02/2022</li>
-                                <li>10/02/2022</li>
+                                <li></li>
                                 <li><span class="cifrao">R$</span>110,00</li>
-                                <li><span class="cifrao">R$</span>0,00</li>
-                                <li><span class="cifrao">R$</span>110,00</li>
-                                <li class="status" >Pago</li>
-                                <li class="detalhes"><a href="#">Detalhes</a></li>
-                            </ul>
-                    </div>
-                    <div class="row">
-                            <ul>
-                                <li>Felipe</li>
-                                <li>20/01/2022</li>
-                                <li>10/01/2022</li>
-                                <li><span class="cifrao">R$</span>110,00</li>
-                                <li><span class="cifrao">R$</span>0,00</li>
-                                <li><span class="cifrao">R$</span>110,00</li>
+                                {# <li><span class="cifrao">R$</span>0,00</li> #}
+                                {# <li><span class="cifrao">R$</span>0,00</li> #}
                                 <li class="status">Pago</li>
                                 <li class="detalhes"><a href="#">Detalhes</a></li>
                             </ul>
