--- a/views/admin/agendamento/agendamento.njk
+++ b/views/admin/agendamento/agendamento.njk
@@ -60,19 +60,29 @@
     {%endblock%}
 
     {%block content%}
-
+        <h1 class='title'>Agendamentos</h1>
         <div class="table-wrapper agendamento">
             <div class="title table-nav">
-                <h1>Agendamentos</h1>
+
+               
 
                 <form class="search-form" role="search" method="POST" action="/dashboard/agendamento/search">
                 <input type="search" name="searchTerm" class="search-input" placeholder="Search..." aria-label="Search">
                 </form>
+                
+                {# <div class="filtro-contaienr">
+                    <label for="filtro">Status:</label>
+                    <select name="filtro" id="filtro">
+                        <option  selected value="Ativo">Ativo</option>
+                        <option value="Inativo">Inativo</option>
+                    </select>
+                </div> #}
+                
 
                 <a href="/dashboard/agendamento/criar/search" class="add">+ Agendamento</a>
             </div>
 
-            {% for mensagem in msg%}
+            {% for mensagem in msg %}
 
                 <div class="alert-box deleted">
                     <p>{{mensagem}}</p>
@@ -113,7 +123,7 @@
 
                         
                         
-                    <form action="/dashboard/gerenciamento/clientes/edit/{{cliente._id}}?_method=DELETE" method="POST" class="position-relative">
+                    <form action="/dashboard/agendamento/edit/{{agendamento._id}}?_method=DELETE" method="POST" class="position-relative">
                         
                         <button class="deletar act-btn" type="submit" class="btn btn-primary"><ion-icon class="icon" name="person-remove-outline"></ion-icon> Deletar </button>
                     </form>
@@ -149,3 +159,7 @@
 
 
     {% endblock %}
+
+    {%block scripts%}
+    <script src="/scripts/flashmsg.js"></script>
+{%endblock%}
