--- a/views/login/esqueci_senha.njk
+++ b/views/login/esqueci_senha.njk
@@ -12,9 +12,8 @@
 <body>
     <main>
        <div class="logo">
-            <h1>ACADMIN</h1>
+            <img src="/img/acadmin2.png" alt="">
        </div>
-
         <div class="form-wrapper">
             <h1>Redefinir Senha</h1>
 
