--- a/views/login/login.njk
+++ b/views/login/login.njk
@@ -12,7 +12,7 @@
 <body>
     <main>
        <div class="logo">
-            <h1>ACADMIN</h1>
+            <img src="/img/acadmin2.png" alt="">
        </div>
 
         <div class="form-wrapper">
