--- a/views/portal/user-financeiro.njk
+++ b/views/portal/user-financeiro.njk
@@ -10,6 +10,9 @@
 {%block menu%}
 <aside>
     <nav class="ativo" id="left-menu">
+        <div class="logo">
+                <img src="/img/acadmin3.png" alt="Acadmin Logo">
+        </div>
         <ul>
             <li class="list ">
                 <a href="/portal">
