--- a/public/styles/boleto.css
+++ b/public/styles/boleto.css
@@ -86,9 +86,9 @@
     margin-bottom: 20px;
 }
 .boleto__logo {
-    width: 150px;
-    height: 50px;
-    background-color: #000;
+    width: 180px;
+    /* height: 50px; */
+    /* background-color: #ffffff; */
     color: #fff;
     font-size: 24px;
     font-weight: bold;
@@ -108,11 +108,15 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 .boleto__details__item {
     font-size: 16px;
     font-weight: bold;
     line-height: 1.5;
+    word-wrap: break-word;
+    max-width: 400px;
+    
 }
     .boleto__instructions {
     margin-top: 20px;
