--- a/views/admin/financeiro/search-pagamento.njk
+++ b/views/admin/financeiro/search-pagamento.njk
@@ -120,19 +120,6 @@
                         
                     
 
-                        {# <div class="row">
-                                <ul>
-                                    <li>Felipe</li>
-                                    <li>20/03/2022</li>
-                                    <li></li>
-                                    <li><span class="cifrao">R$</span>110,00</li> #}
-                                    {# <li><span class="cifrao">R$</span>0,00</li> #}
-                                    {# <li><span class="cifrao">R$</span>0,00</li> #}
-                                    {# <li class="status">Pendente</li>
-                                    <li class="detalhes"><a href="#">Detalhes</a></li>
-                                </ul>
-                        </div> #}
-
                         <div id="boletos-list">
                             {% if boletos.length > 0 %}
 
@@ -180,22 +167,17 @@
                             </div>
                             <div class="boleto__details">
                                 <div class="boleto__details__item">Cliente: {{boleto.clienteNome}}</div>
-                                <div class="boleto__details__item"> CPF: {{boleto.clienteCpf}}</div>
+                                <div class="boleto__details__item">boleto id: {{boleto.id}}</div>
                             </div>
                             <div class="boleto__details">
-                                <div class="boleto__details__item">Data Vencimento: {{boleto.dataVencimento}}</div>
+                                <div class="boleto__details__item">Vencimento: {{boleto.dataVencimento}}</div>
                                 <div class="boleto__details__item">Valor: R$ {{boleto.valor}},00</div>
                             </div>
 
                             {% if boleto.status == 'Pago' %}
                             
                                 <div class="boleto__details">
-                                    <div class="boleto__details__item">Data Pagamento: {{boleto.dataPagamento}}</div>
-
-
-                                </div>
-                                <div class="boleto__details">
-                                    <div class="boleto__details__item">transação hash: {{boleto.transactionHash}}</div>
+                                    <div class="boleto__details__item">data Pagamento: {{boleto.dataPagamento}}</div>
                                 </div>
                             {% endif %}
 
@@ -209,7 +191,7 @@
                         
                         
                         <div class="modal-buttons">
-                            <form  action="/financeiro/excluir/boleto/{{boleto._id}}?_method=DELETE" method="POST">
+                            <form action="/financeiro/excluir/boleto/{{boleto._id}}?_method=DELETE" method="POST">
                                     <button type="submit" class="btn excluir">Excluir Cobrança</button>
                             </form>
                             {% if boleto.status == 'Pendente' or boleto.status == 'Atrasado' %}
@@ -231,58 +213,11 @@
 
     {% endblock boletoModal %}
 
-    
-
-        {# pagination #}
-
-         {# {% if boletos.length > 0 %}
-
-            <nav class="pagination-nav">
-                <ul class="pagination-ul">
-
-                    {% if current == 1 %}
-                        <li class="page-item disabled"><a href="#" class="page-link">Primeira</a></li>
-                        {% else %}
-                        <li class="page-item"><a href="/dashboard/financeiro/pagamentos?page=1" class="page-link">Primeira</a></li>
-                    {% endif %}
-
-
-                    {% set i = 0 %}
-
-                    {% if number > 5 %}
-                        {% set i = number - 4 %}
-                        {% else %}
-                        {% set i = 1 %}
-                    {% endif %}
-
-
-                    {% for i in range(1 , pages + 1) %}
-                        {% if i == current %}
-                            <li class="page-item disabled"><a href="" class="page-link">{{i}}</a></li>
-                            {%else%}
-                            <li class="page-item"><a href="/dashboard/financeiro/pagamentos?page={{i}}" class="page-link">{{i}}</a></li>
-                        {% endif %}
-
-                     
-                    {% endfor %}
-
-
-                    {% if current == pages %}
-                        <li class="page-item disabled"><a href="" class="page-link">Ultima</a></li>
-                        {%else%}
-                        <li class="page-item"><a href="/dashboard/financeiro/pagamentos?page={{pages}}" class="page-link">Ultima</a></li>
-                    {% endif %}
-
-                </ul>
-            </nav>
-
-        {% endif %} #}
 
     {% endblock content %}
 
 
 {%block scripts%}
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="/scripts/boletoModal.js"></script>
 <script src="/scripts/filtro.js"></script>
 
