--- a/views/portal/portal.njk
+++ b/views/portal/portal.njk
@@ -9,6 +9,9 @@
 {%block menu%}
 <aside>
     <nav class="ativo" id="left-menu">
+        <div class="logo">
+                <img src="/img/acadmin3.png" alt="Acadmin Logo">
+        </div>
         <ul>
             <li class="list active">
                 <a href="/portal">
